# kizuna-voice-studio

./: .gitignore  Dockerfile.hf-space  LICENSE  README.md  README.space.docker.md  README.space.md  app.py  packages.hf-space.txt  pyproject.toml  requirements.hf-space.txt
.github/workflows/: manual-electron-release-builds.yml  repository-checks.yml  voice-factory-electron-variants.yml
electron/: backend-bootstrap.js  build-variant.js  index.html  main.js  package-lock.json  package.json  preload.js  renderer.js  styles.css  variant-manifest.js
examples/: project-spec.json
scripts/: build-electron-release.sh  diagnose_windows_ssh_auth.sh  install_windows_test_prereqs.sh  setup_windows_ssh_key.sh  upload-electron-release-assets.sh  windows_amd_remote.sh  windows_amd_smoke_test.ps1
src/: sitecustomize.py
src/voice_factory/: __init__.py  cli.py  config.py  exporter.py  gradio_app.py  lavasr.py  models.py  package_runtime_runner.py  piper_directml_train.py  piper_export_onnx_wrapper.py  piper_prepare.py  piper_train_wrapper.py  prompt_bank.json  sbv2_directml_train.py  sbv2_preprocess_wrapper.py  sdk.py  server.py  service.py  translator.py
src/wandb/: __init__.py  wandb_run.py
src/wandb/sdk/lib/: __init__.py
